# chardet

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .travis.yml  AGENTS.md  AUTHORS.rst  BUGFIX_SUMMARY.md  CharsetsTabs.txt  ENCODING_SUBSTITUTIONS.md  HEURISTICS.md  HISTORY.rst  MANIFEST.in  NOTES.rst  README.rst  alt_test.py  bench.py  calculate_training_doc_counts.py  convert_language_model.py  create_language_model.py  generate_test_files.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: lint_python.yml  test.yml
charade/: __init__.py  big5freq.py  chardistribution.py  charsetgroupprober.py  charsetprober.py  codingstatemachine.py  compat.py  cp949freq.py  cp949prober.py  escprober.py  eucjpprober.py  euckrfreq.py  euctwfreq.py  hebrewprober.py  jisfreq.py  jpcntx.py  langbulgarianmodel.py  langthaimodel.py  latin1prober.py  mbcharsetprober.py  mbcsgroupprober.py  mbcssm.py  universaldetector.py
chardet/: __init__.py  big5freq.py  big5prober.py  chardetect.py  chardistribution.py  charsetgroupprober.py  charsetprober.py  codingstatemachine.py  codingstatemachinedict.py  compat.py  constants.py  cp932prober.py  cp949prober.py  encoding_eras.py  enums.py  escprober.py  escsm.py  eucjpprober.py  euckrfreq.py  euckrprober.py  euctwfreq.py  euctwprober.py  gb18030prober.py  gb2312freq.py  gb2312prober.py  hebrewprober.py  jisfreq.py  johabfreq.py  johabprober.py  jpcntx.py  langarabicmodel.py  langbelarusianmodel.py  langbretonmodel.py  langbulgarianmodel.py  langcroatianmodel.py  langcyrillicmodel.py  langczechmodel.py  langdanishmodel.py  langdutchmodel.py  langenglishmodel.py  (+51 more)
chardet/cli/: chardetect.py
chardet/metadata/: charsets.py  languages.py
docs/: README.md  conf.py  faq.html  faq.rst  history.html  history.rst  how-it-works.html  how-it-works.rst  index.html  index.rst  license.html  license.rst  supported-encodings.html  supported-encodings.rst  usage.html  usage.rst
docs/api/: chardet.rst
docs/css/: chardet.css
tests/: README.txt
tests/Big5/: blog.worren.net.xml  coolloud.org.tw.xml  ebao.us.xml  tw.blog.xubg.com.xml  unoriginalblog.com.xml
tests/CP932/: 5554s2a-cp932.txt  hardsoft.at.webry.info.xml  www2.chuo-u.ac.jp-suishin.xml
tests/CP949/: arts.egloos.com.xml  calmguy.egloos.com.xml  critique.or.kr.xml  yunho.egloos.com.xml
tests/EUC-JP/: _ude_1.txt  aivy.co.jp.xml  akaname.main.jp.xml  arclamp.jp.xml  aristrist.s57.xrea.com.xml  artifact-jp.com.xml  atom.ycf.nanet.co.jp.xml  azito.under.jp.xml  azoz.org.xml  blog.kabu-navi.com.atom.xml  blog.kabu-navi.com.xml  bphrs.net.xml  ch.kitaguni.tv.xml  club.h14m.org.xml  contents-factory.com.xml  furusatonoeki.cutegirl.jp.xml  manana.moo.jp.xml  mimizun.com.xml  misuzilla.org.xml  motors.sytes.net.xml  overcube.com.atom.xml  overcube.com.xml  pinkupa.com.xml  rdf.ycf.nanet.co.jp.xml  siesta.co.jp.aozora.xml  tls.org.xml  yukiboh.moo.jp.xml
tests/EUC-KR/: 88455a1-euc-kr.txt  birder.egloos.com.xml  blog.empas.com.xml  chisato.info.xml  console.linuxstudy.pe.kr.xml  epitaph.egloos.com.xml  ittrend.egloos.com.xml  jely.egloos.com.xml  kina.egloos.com.xml  lennon81.egloos.com.xml  poliplus.egloos.com.xml  scarletkh2.egloos.com.xml  siwoo.org.xml  tori02.egloos.com.xml  willis.egloos.com.xml  xenix.egloos.com.xml  zangsalang.egloos.com.xml
tests/GB18030/: 744521a-gbk.txt
tests/GB2312/: 14.blog.westca.com.xml  254.blog.westca.com.xml  _ude_1.txt  blog.online-edu.org.xml  cappuccinos.3322.org.xml  chen56.blogcn.com.xml  cindychen.com.xml  cnblog.org.xml  coverer.com.xml  home.donews.com.xml  kelet.512j.com.xml  luciferwang.blogcn.com.xml  w3cn.org.xml  www2.tianyablog.com.xml  xy15400.blogcn.com.xml
tests/Johab/: mdir-doc.txt
tests/KOI8-R/: aif.ru.health.xml  forum.template-toolkit.ru.1.xml  forum.template-toolkit.ru.4.xml  forum.template-toolkit.ru.6.xml  forum.template-toolkit.ru.8.xml  forum.template-toolkit.ru.9.xml  greek.ru.xml  koi.kinder.ru.xml  newsru.com.xml  susu.ac.ru.xml
tests/KZ1048/: useful-sentences.html
tests/None/: sample-1.xlsx
tests/SHIFT_JIS/: 10e.org.xml  1affliate.com.xml  A1.csv  _ude_2.txt  _ude_4.txt  accessories-brand.com.xml  amefoot.net.xml  andore.com.inami.xml  andore.com.money.xml  andore.com.xml  blog.inkase.net.xml  blog.paseri.ne.jp.xml  bloglelife.com.xml  brag.zaka.to.xml  celeb.lalalu.com.xml  clickablewords.com.xml  do.beginnersrack.com.xml  dogsinn.jp.xml  grebeweb.net.xml  milliontimes.jp.xml  moon-light.ne.jp.xml  nextbeaut.com.xml  ooganemochi.com.xml  perth-on.net.xml  sakusaka-silk.net.xml  setsuzei119.jp.xml  tamuyou.haun.org.xml  yasuhisa.com.xml
tests/TIS-620/: opentle.org.xml  pharmacy.kku.ac.th.analyse1.xml  pharmacy.kku.ac.th.centerlab.xml  pharmacy.kku.ac.th.healthinfo-ne.xml
tests/UTF-16BE/: plane1-utf-16be.html  sample_chinese_no_bom.txt
tests/UTF-16LE/: nobom-utf16le  plane1-utf-16le.html  sample_chinese_no_bom.txt
tests/UTF-32/: iris-utf-32.json
tests/UTF-32BE/: nobom-utf32be  plane1-utf-32be.html  sample_chinese_no_bom.txt
tests/UTF-32LE/: nobom-utf32le.txt  sample_chinese_no_bom.txt
tests/ascii/: _ude_1.txt  book-stats.json  books.json  dummy-1.pem  parchments.json  simple.json
tests/big5-chinese/: _ude_2.txt  culturax_OSCAR-2201_10.txt
tests/cp037-breton/: culturax_OSCAR-2019_43764.txt
tests/cp037-danish/: culturax_mC4_83466.txt  culturax_mC4_83468.txt  culturax_mC4_83470.txt
tests/cp037-dutch/: culturax_mC4_107675.txt  culturax_mC4_107676.txt
tests/cp037-english/: _ude_1.txt  culturax_mC4_84512.txt
tests/cp037-finnish/: culturax_mC4_80361.txt  culturax_mC4_80364.txt
tests/cp037-french/: culturax_mC4_88373.txt
tests/cp037-german/: culturax_OSCAR-2301_83754.txt  culturax_mC4_83756.txt
tests/cp037-icelandic/: culturax_mC4_77487.txt  culturax_mC4_77488.txt  culturax_mC4_77489.txt
tests/cp037-indonesian/: culturax_mC4_114889.txt  culturax_mC4_114890.txt  culturax_mC4_114892.txt
tests/cp037-irish/: culturax_mC4_63470.txt  culturax_mC4_63471.txt
tests/cp037-italian/: culturax_mC4_92388.txt  culturax_mC4_92391.txt
(+1563 files in other folders)
