[metadata]
name = chardet
author = Mark Pilgrim
author_email = mark@diveintomark.org
maintainer = Daniel Blanchard
maintainer_email = dan.blanchard@gmail.com
license = LGPL
description = Universal encoding detector for Python 2 and 3
keywords = encoding, i18n, xml
url = https://github.com/chardet/chardet
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Linguistic

[options]
packages = find:
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
tests_require = pytest; hypothesis

[options.entry_points]
console_scripts = chardetect = chardet.cli.chardetect:main

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = -v
python_files = test.py
norecursedirs = *

